fix: bottom nav gap & no-scroll on popup open

--- a/MoneyTracker.App/client/src/styles/Layout.scss
+++ b/MoneyTracker.App/client/src/styles/Layout.scss
@@ -24,9 +24,10 @@ main {
 
 .nav-menu {
   position: sticky;
+  position: -webkit-sticky;
   width: 100%;
   height: $layout-panel_height;
-  bottom: 0px;
+  bottom: 0;
   padding: 0 20px;
   background-color: $primary-dark-color;
   display: flex;
